# cloudbreak

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  example.cloudbreak.api-with-query-tracker-client.toml  example.cloudbreak.api.toml  example.cloudbreak.dbtools.toml  example.cloudbreak.index.toml  example.cloudbreak.integration_tests.toml  example.cloudbreak.migration.toml  example.cloudbreak.query-tracker.toml  example.cloudbreak.snapshot.toml  tempo.yaml  tracker-config.yml
.bench/: getProgramAccounts.ts  getProgramAccountsHttp.js  getTokenAccountsByOwner.ts
crates/api/: Cargo.toml
crates/api/src/: db_query.rs  error.rs  lib.rs  metrics.rs  query_tracker_client.rs  slot_syncronizer.rs
crates/api/src/db/: getAccountInfo.sql  getAccountInfoWithMintData.sql  getBalance.sql  getMintData.sql  getMintDataWithProgram.sql  getMultipleAccounts.sql  getMultipleAccountsWithMintData.sql  getProgramAccounts.sql  getTokenAccountBalance.sql  getTokenAccountsByOwner.sql
crates/api/src/http/: mod.rs  operational_endpoints.rs  rpc.rs  server.rs  streaming.rs
crates/api/src/methods/: genesis.rs  get_account_info.rs  get_balance.rs  get_multiple_accounts.rs  get_token_account_balance.rs  mint.rs  mint_accounts.rs  mod.rs  program.rs  slot.rs  token.rs  version.rs
crates/api/src/modules/: mod.rs
crates/api/src/modules/cache/: gpa_with_cache.sql  mod.rs
crates/command/: Cargo.toml
crates/command/src/: hash_check.rs  main.rs  opentelemetry.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/db/: insertClosedAccountWithMap.sql
crates/core/src/modules/: account_owner_map.rs  mod.rs
crates/dbtools/: Cargo.toml  README.md
crates/dbtools/src/: main.rs
crates/dbtools/src/analytics/: accounts_count.rs  distinct_owners.rs  get_biggest_programs.rs  get_delegates.rs  indexes_count.rs  indexes_sizes.rs  mint_accounts_count.rs  mod.rs  partition_sizes.rs  slow_queries.rs  table_size.rs
crates/dbtools/src/config/: mod.rs  pg_tracing.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: db_queries.rs  error.rs  indexer.rs  lib.rs  metrics.rs
crates/index/src/db/: cleanup.sql  closedAccountscleanup.sql  insertClosedAccount.sql
crates/index/src/modules/: finalize_slot.rs  grpc.rs  hash_checker.rs  lt_hash.rs  mod.rs  panic_handler.rs  save_block.rs  self_healing.rs  snapshot.rs
crates/integration_tests/: Cargo.toml  README.md  gpa_benchmark_by_partition.json  gpa_benchmark_requests.json
crates/integration_tests/compare_responses_results/: .gitignore  gtabd_bodies.json
crates/integration_tests/src/: benchmark.rs  compare_accounts_by_mint.rs  compare_accounts_by_mint_vs_cluster.rs  compare_genesis_hash.rs  compare_program_accounts.rs  compare_version.rs  config.rs  db_check.rs  get_slot.rs  logging.rs  main.rs  response_comparison.rs  utils.rs
crates/integration_tests/src/sources/: json_file.rs  mismatch_files.rs  mod.rs  victoria_logs.rs
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20220101_000001_create_slots_table.rs  m20250414_201255_create_accounts_table.rs  m20250714_055019_add_bs58_functions.rs  m20251008_080739_create_snapshot_accounts_table.rs  m20251021_222145_create_service_health_table.rs  m20260325_000000_drop_temp_tables.rs  m20260414_000000_create_indexer_filters_table.rs  m20260522_000000_create_environment_info_table.rs  main.rs
crates/query-tracker/: Cargo.toml
crates/query-tracker/src/: error.rs  index_listener.rs  lib.rs  metrics.rs  rpc.rs  tracker.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: accountsdb_helpers.rs  db_queries.rs  lib.rs  lt_hash.rs  metrics.rs  sidecar.rs
crates/snapshot/src/db/: cleanup_closed_accounts.sql  cleanup_duplicated_accounts.sql  create_accounts_to_delete_table.sql  create_temp_closed_accounts_table.sql  drop_temp_closed_accounts_table.sql  insert_into_snapshot_account_versions.sql  insert_into_temp_closed_accounts.sql
grafana/provisioning/datasources/: datasources.yaml
