[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
authors = [
  "Triton One Limited",
  "Fernando Deluret <38841537+fernandodeluret@users.noreply.github.com>",
  "Arthur Paiva <38506981+ArthurPaivaT@users.noreply.github.com>",
  "Nagaprasad V R <81755170+Nagaprasadvr@users.noreply.github.com>",
  "Kyle Espinola",
  "Wilfred Almeida <60785452+WilfredAlmeida@users.noreply.github.com>",
  "Daniel Urgell",
  "Mateusz Mroz",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
serde_json = "1"
futures = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
bs58 = "0.5"
hex = "0.4"
chrono = "0.4"
solana-pubkey = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rand = "0.8"
zstd = "0.13"
base64 = "0.22"
