[package]
name = "cloudbreak-migration"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
authors = [
  "Triton One Limited",
  "Fernando Deluret <38841537+fernandodeluret@users.noreply.github.com>",
  "Arthur Paiva <38506981+ArthurPaivaT@users.noreply.github.com>",
  "Nagaprasad V R <81755170+Nagaprasadvr@users.noreply.github.com>",
  "Kyle Espinola",
  "Wilfred Almeida <60785452+WilfredAlmeida@users.noreply.github.com>",
  "Daniel Urgell",
  "Mateusz Mroz",
]
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
solana-pubkey = { workspace = true }
hex = { workspace = true }
cloudbreak-core = { workspace = true }

[dependencies.sea-orm-migration]
version = "1.1.8"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
