[package]
name = "cloudbreak-snapshot"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
authors = [
  "Triton One Limited",
  "Fernando Deluret <38841537+fernandodeluret@users.noreply.github.com>",
  "Arthur Paiva <38506981+ArthurPaivaT@users.noreply.github.com>",
  "Nagaprasad V R <81755170+Nagaprasadvr@users.noreply.github.com>",
  "Kyle Espinola",
  "Wilfred Almeida <60785452+WilfredAlmeida@users.noreply.github.com>",
  "Daniel Urgell",
  "Mateusz Mroz",
]

[dependencies]
cloudbreak-core = { workspace = true }
cloudbreak-entity = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
solana-pubkey = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
solana-program = { workspace = true }
solana-accounts-db = { workspace = true }
solana-runtime = { workspace = true }
solana-hash = { workspace = true }
solana-hard-forks =  { workspace = true }
solana-fee-calculator = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-inflation = { workspace = true }
solana-stake-interface = { workspace = true }
solana-serde =  { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }
hex = { workspace = true }
prometheus = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0.143"
bincode = "1.3"
tempfile = "3"
zstd = "0.13"
tar = "0.4"
solana-account = { workspace = true }
lazy_static = { workspace = true }
solana-lattice-hash = { workspace = true }
blake3 = { workspace = true }